Fix Netlify functions deployment and add better error handling

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "netlify": "netlify dev"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
