--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,24 @@
 [build]
   command = "npm run build"
   publish = "out"
-  functions = "netlify/functions"
+  functions = "functions"
 
 [build.environment]
   NODE_VERSION = "18"
 
 [[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
+  from = "/api/submit-request"
+  to = "/.netlify/functions/submit-request"
+  status = 200
+
+[[redirects]]
+  from = "/api/admin/requests"
+  to = "/.netlify/functions/admin-requests"
+  status = 200
+
+[[redirects]]
+  from = "/api/admin/requests/*"
+  to = "/.netlify/functions/admin-requests-id"
   status = 200
 
 [[redirects]]
