--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "npm run build"
   publish = "out"
-  functions = "functions"
+  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
