--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,14 @@
 [build]
   publish = ".next"
+  command = "npm run build"
 
 [build.environment]
+  NODE_VERSION = "18"
+
+[[redirects]]
+  from = "/api/setup-database"
+  to = "/.netlify/functions/setup-database"
+  status = 200
 
 [[redirects]]
   from = "/api/submit-request"
