Fix DELETE method for admin requests - Updated Next.js API route to handle async params correctly - Enhanced Netlify function with better debugging and error handling - Improved ID extraction logic for DELETE requests - Updated netlify.toml configuration for better routing

--- a/netlify.toml
+++ b/netlify.toml
@@ -38,6 +38,7 @@
   from = "/api/admin/requests/*"
   to = "/.netlify/functions/admin-requests-id"
   status = 200
+  force = true
 
 [[redirects]]
   from = "/_next/static/*"
