--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.2",
+    "jose": "^6.1.0",
     "next": "15.5.4",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
