chore: Clean up project - remove all test files and unused code
Removed unnecessary files and code as project is now complete:

Test & Debug Files Removed:
- admin-email-test.ps1, email-test-enhanced.ps1, test-email.ps1
- test-data.json
- RESPONSIVE_TEST.md, ROLES_STATUS.md, WEBSITE_IMPROVEMENTS.txt
- GET_ANON_KEY.md, LogoUSTHB.png (duplicate)
- .github/copilot-instructions.md

API Routes Removed:
- /api/test, /api/test-db, /api/test-student-update
- /api/setup/status

Netlify Functions Removed:
- test.js, test-db-connection.js, test-email.js
- health.js, setup-database.js

Database Scripts Removed:
- update_admin_password.sql (temporary script)

Public Assets Cleaned:
- Removed unused SVG icons (file, globe, next, vercel, window)
- Removed duplicate LogoUSTHB.png

Configuration Updates:
- Updated netlify.toml to remove test route redirects
- Updated Node version from 18 to 20
- Cleaned up redirect rules

Project Structure:
✅ Clean and production-ready
✅ Only essential files remain
✅ All test and debug code removed
✅ Documentation maintained (README.md)
✅ Database migrations preserved
✅ Environment examples kept

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,25 +4,10 @@
   publish = ".next"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
-
-[[redirects]]
-  from = "/api/health"
-  to = "/.netlify/functions/health"
-  status = 200
-
-[[redirects]]
-  from = "/api/test-db-connection"
-  to = "/.netlify/functions/test-db-connection"
-  status = 200
-
-[[redirects]]
-  from = "/api/setup-database"
-  to = "/.netlify/functions/setup-database"
-  status = 200
 
 [[redirects]]
   from = "/api/submit-request"
@@ -48,5 +33,7 @@
 # Fallback for all other routes to Next.js
 [[redirects]]
   from = "/*"
+  to = "/index.html"
+  status = 200
   to = "/index.html"
   status = 200
